fix: add spacing on first nav link and adjust bottom links on large screen

--- a/css/global.css
+++ b/css/global.css
@@ -129,11 +129,13 @@ nav.nav-menu > a {
 	font-size: 250%;
 	font-weight: 900;
 	flex: 1;
-	align-self: center;
 	text-decoration: none;
 	display: block;
 	width: 100%;
 	text-align: center;
+}
+nav.nav-menu > a:first-of-type {
+    margin-block-start: 1em;
 }
 .new-tab-links a {
 	font-size: 1em;
@@ -356,7 +358,7 @@ section:nth-of-type(4),
 	nav.nav-menu > a {
 		font-size: 100%;
 		font-weight: 400;
-		flex: 0 1 20%;
+		flex: 0 1 18%;
 	}
 	.nav-menu div.border {
 		height: 1px;
